
  * Add support for "auto" size to use 50% of system memory (Closes: #564141)
  * Restore [bd]ashism to avoid dependency on sed in initramfs stage. Since
    it is supported by dash it should not be a problem (Closes: #564141)
  * Fix permissions of tmpfs mounts: Root FS gets 755 and other FSs get
    the same ownership/permissions of the original fs. (Closes: #561640)
  * Drop dependency on aufs-modules and add run-time aufs check
    (Closes: #566161)
  * Add a copy of the initramfs portion to nfs-bottom to be usable for
    nfs mounts. This was reported to work. (Closes: #564138)
  * Standards version 3.8.4. No changes needed.

 -- Stefanos Harhalakis <v13@v13.gr>  Sun, 25 Apr 2010 12:52:36 +0300

fsprotect (1.0.4) unstable; urgency=low

  * Remove dependency on aufs-tools (Closes: #555636)
  * Standards version 3.8.3. No changes needed.
  * Remove full-path from update-initramfs call (Fixes lintian warnings).
  * Change init script dependency from mountall to $local_fs (Fixes lintian
    error)
  * Register fsprotect.pdf with doc-base (Fixes lintian info message).

 -- Stefanos Harhalakis <v13@v13.gr>  Fri, 13 Nov 2009 12:39:53 +0200

fsprotect (1.0.3) unstable; urgency=low

  * Don't show "We don't want fsprotect" unless there is a 'nofsprotect'
    kernel option. (Closes: #530242)
  * Improved documentation a bit thanks to Martin T. Krafft. (Closes: #530243)
  * Fix bashism in initramfs local-bottom script.
  * Make fsprotect work with dirs-in-dirs

 -- Stefanos Harhalakis <v13@v13.gr>  Sat, 23 May 2009 13:19:33 +0300

fsprotect (1.0.2) unstable; urgency=low

  * Documentation (fsprotect.pdf).
  * Standards version 3.8.1
  * Create /fsprotect on-the-fly inside aufs-dir and remove /fsprotect/*
    from debian/dirs

 -- Stefanos Harhalakis <v13@v13.gr>  Sun, 12 Apr 2009 15:32:11 +0300

fsprotect (1.0.1) unstable; urgency=low

  * Debian packaging fixes 

 -- Stefanos Harhalakis <v13@v13.gr>  Sun, 22 Mar 2009 23:29:45 +0200
