@@ -2,7 +2,7 @@ Source: fsprotect
 Section: admin
 Priority: extra
 Maintainer: Stefanos Harhalakis <v13@v13.gr>
-Build-Depends: debhelper (>= 7)
+Build-Depends: cdbs, debhelper (>= 7)
 Standards-Version: 3.8.4
 Homepage: http://www.v13.gr/
 
