@@ -1,0 +1,5 @@
+initramfs-tools/hooks/fsprotect /usr/share/initramfs-tools/hooks
+initramfs-tools/scripts/local-bottom/fsprotect /usr/share/initramfs-tools/scripts/local-bottom
+initramfs-tools/scripts/local-bottom/fsprotect /usr/share/initramfs-tools/scripts/nfs-bottom
+sbin/is_aufs /sbin
+lib/fsprotect-protect /lib/fsprotect/
